Fix/users (#52)
* Fix database name in .env.example to be empty

* Add .golangci.yml configuration to enable revive linter with package-comments rule disabled

* Fix Makefile to update refresh command for database migrations

* Fix variable naming and update user-related database operations in faker.go

* Update API documentation to use user ID instead of email for student retrieval

* Update API documentation to retrieve student information by user ID instead of email

* Refactor context handling to include user ID in audit metadata and update related functions

* Add NullableInt64 type with JSON marshaling and unmarshaling support

* Add UserID to Claims struct and update token generation to include user ID

* Refactor NewService function to simplify logService initialization

* Refactor appointment handling to use user ID instead of email for appointment creation and retrieval

* Refactor appointment handling to use user ID instead of email for appointment creation and retrieval

* Refactor authentication to return user ID and update logging with user ID

* Refactor consent handling to use user ID instead of email for consent operations

* Remove logging of errors in barangay retrieval for cleaner error handling

* Refactor logging system to use UserID instead of UserEmail for enhanced user tracking

* Refactor slips feature to use user ID instead of email for improved data handling and consistency

* Refactor student feature to use user ID instead of email for improved data integrity and consistency

* Refactor student feature to use user ID instead of email for improved data handling and consistency

* Refactor user feature to use user ID instead of email for improved data handling and consistency

* Refactor middleware to use user ID instead of email for improved data handling and consistency

* Add migration scripts to convert user_email to user_id in various tables and update foreign key constraints
