# docs/external/external_swagger.json
@@ -164,14 +164,14 @@
                 }
             }
         },
-        "/students/external/by-email/{email}": {
+        "/students/external/by-id/{userID}": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get student information by email address",
+                "description": "Get student information by user ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -181,12 +181,12 @@
                 "tags": [
                     "External Students"
                 ],
-                "summary": "Get student by email",
+                "summary": "Get student by user ID",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Email address of the student",
-                        "name": "email",
+                        "description": "User ID of the student",
+                        "name": "userID",
                         "in": "path",
                         "required": true
                     }
@@ -372,6 +372,9 @@
                 },
                 "suffixName": {
                     "type": "string"
+                },
+                "userId": {
+                    "type": "integer"
                 },
                 "yearLevel": {
                     "type": "integer"
